--- a/brokenmetaljewelry/src/App.css
+++ b/brokenmetaljewelry/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0840af;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
