--- a/brokenmetaljewelry/src/App.css
+++ b/brokenmetaljewelry/src/App.css
@@ -8,7 +8,7 @@
 	top: 0;
 	z-index: -1;
 }
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -45,4 +45,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
