--- a/brokenmetaljewelry/src/App.css
+++ b/brokenmetaljewelry/src/App.css
@@ -1,7 +1,7 @@
 #tsparticles {
 	position: fixed;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	margin: 0;
 	padding: 0;
 	left: 0;
