--- a/brokenmetaljewelry/src/App.css
+++ b/brokenmetaljewelry/src/App.css
@@ -1,4 +1,4 @@
-#tsparticles {
+/* #tsparticles {
 	position: fixed;
 	height: 100vh;
 	width: 100vw;
@@ -7,7 +7,7 @@
 	left: 0;
 	top: 0;
 	z-index: -1 !important;
-}
+} */
 /* .App {
   text-align: center;
 }
