--- a/brokenmetaljewelry/src/components/sideBar/SideBar.css
+++ b/brokenmetaljewelry/src/components/sideBar/SideBar.css
@@ -3,16 +3,20 @@
     flex-direction: column;
     position: relative;
    width: 12rem;
-   left: 65rem;
-   top: 20rem;
+   left: 92rem;
+   top: -26rem;
 
 }
 .sideBar{
     display: flex;
     flex-direction: column;
     align-items: space-between;
-    color:rgb(100, 16, 16);
+    
     font-size: xx-large;
+}
+.sideBar a {
+    color:rgb(48, 18, 1);
+    padding: 2rem;
 }
 @media  screen and  (max-width: 390px) {
 .sideBarContainer {
