--- a/brokenmetaljewelry/src/App.css
+++ b/brokenmetaljewelry/src/App.css
@@ -7,7 +7,7 @@
 	left: 0;
 	top: 0;
 	z-index: -1 !important;
-  background-image: linear-gradient( blueviolet 2%, rgb(41, 24, 112) );
+  background-image: linear-gradient( #abdf91 3%, #557446 );
 }
 
 /* .App {
