--- a/brokenmetaljewelry/src/App.css
+++ b/brokenmetaljewelry/src/App.css
@@ -1,13 +1,13 @@
 #tsparticles {
 	position: absolute;
-	height: 110vh;
-	width: 110vw;
+	height: 100vh;
+	width: 100vw;
 	margin: 0;
 	padding: 0;
 	left: 0;
 	top: 0;
 	z-index: -1 !important;
-  background-image: linear-gradient( #abdf91 3%, #557446 );
+  /* background-image: linear-gradient( #abdf91 3%, #557446 ); */
 }
 
 /* .App {
