--- a/brokenmetaljewelry/src/index.css
+++ b/brokenmetaljewelry/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
  
+  background-image: linear-gradient(#abdf91 3%, #557446);
 }
 
 code {
@@ -14,4 +15,6 @@ code {
 }
 .tsparticles {
   height: 100vh;
+}
+#root{
 }
