--- a/brokenmetaljewelry/src/index.css
+++ b/brokenmetaljewelry/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
  
-  background-image: linear-gradient(#abdf91 2%, #394e2f );
+  background-image: linear-gradient(#abdf91 2%, #557446 );
 }
 
 code {
