--- a/brokenmetaljewelry/src/components/footer/Footer.css
+++ b/brokenmetaljewelry/src/components/footer/Footer.css
@@ -1,10 +1,10 @@
 .footerContainer {
     display: flex;
-    position: relative;
-    bottom: 15rem;
+    
+    
     /* background-color: #cf9e00; */
     height: 100px;
-    width: 100px;
+    width: 100%;
     size: 36px;
     align-items: center;
 }
