--- a/brokenmetaljewelry/src/components/sideBar/SideBar.css
+++ b/brokenmetaljewelry/src/components/sideBar/SideBar.css
@@ -1,10 +1,10 @@
 .sideBarContainer{
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction:row;
 align-items: center;
-   width: 12%;
+   width: 100%;
    border: double 8px #2e2e2e;
-   border-radius: 7%;
+   position: sticky;
 background-color: #cf9e00;
 /* position: sticky;
 left: 80%;
@@ -12,7 +12,7 @@ top: 50%; */
 }
 .sideBar{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-size: xx-large;
 }
 .sideBar a {
