--- a/brokenmetaljewelry/src/components/contact/Contact.css
+++ b/brokenmetaljewelry/src/components/contact/Contact.css
@@ -3,13 +3,27 @@
     flex-direction: column;
     border: 10px solid balck;
     align-items:center;
-    margin: 10%;
-    padding: 5%;
+    margin: 1%;
+    padding: 1%;
+   
 
 }
 .fullName{
-    width: 100%;
+    width: 150%;
     height: 1.5rem;
     margin-bottom: 4%;
+    border-radius: 1%;
 
+}
+.email{
+    width: 150%;
+    height: 1.5rem;
+    margin-bottom: 4%;
+    border-radius: 1%;
+}
+.message {
+    width: 150%;
+    height: 4rem;
+    margin-bottom: 4%;
+    border-radius: 1%;
 }
