--- a/brokenmetaljewelry/src/components/contact/Contact.css
+++ b/brokenmetaljewelry/src/components/contact/Contact.css
@@ -2,13 +2,14 @@
     display: flex;
     flex-direction: column;
    
-    align-items:center;
-  
-   
+    align-content:center;
+  height: 100vh;
+  margin-top: 10%;
+   margin-left: 15%;
 
 }
 .fullName{
-    width: 150%;
+    width: 70%;
     height: 1.5rem;
     margin-bottom: 4%;
     border-radius: 1%;
@@ -16,14 +17,14 @@
 
 }
 .email{
-    width: 150%;
+    width: 70%;
     height: 1.5rem;
     margin-bottom: 4%;
     border-radius: 1%;
     background-color: #cf9e00 ;
 }
 .message {
-    width: 150%;
+    width: 70%;
     height: 4rem;
     margin-bottom: 4%;
     border-radius: 1%;
