--- a/brokenmetaljewelry/src/components/sideBar/SideBar.css
+++ b/brokenmetaljewelry/src/components/sideBar/SideBar.css
@@ -1,11 +1,11 @@
 .sideBarContainer{
     display: flex;
     flex-direction:row;
-align-items: center;
-   width: 100%;
-   border: double 8px #2e2e2e;
-   position: sticky;
-background-color: #cf9e00;
+/* align-items: center; */
+   /* width: 100%; */
+   border: double 15px var(--burgandy);
+   /* position: sticky; */
+background-color: var(--yellow);
 }
 .sideBar{
     display: flex;
@@ -13,15 +13,14 @@ background-color: #cf9e00;
     font-size: xx-large;
 }
 .sideBar a {
-    color:rgb(48, 18, 1);
+    color:var(--burgandy);
     padding: 2rem;
     text-decoration: none;
+    font-family: 'Acme', sans-serif;
 }
-/* @media  screen and  (max-width: 390px) {
-.sideBarContainer {
-    width: 50%;
-    left: 38rem;
-    top: -142rem;
+ @media  screen and  (max-width: 390px) {
+.sideBar {
+   font-size: 20px;
 }
- };  */
+ }
     
