--- a/brokenmetaljewelry/src/components/myWorks/myWorks.css
+++ b/brokenmetaljewelry/src/components/myWorks/myWorks.css
@@ -1,5 +1,5 @@
 .card-body{
-    width: 20%;
+    width: 30%;
     margin: 2%;
 }
 .card1{
@@ -14,8 +14,11 @@ h1{
     color:var(--burgandy);
     font-size: 50px;
 }
-img{
+.card-image{
    width: 40%;
-   padding: 1%; 
+   padding-top: 5%; 
    object-fit:contain
+}
+p{
+    width: 40%;
 }
