--- a/brokenmetaljewelry/src/components/myWorks/myWorks.css
+++ b/brokenmetaljewelry/src/components/myWorks/myWorks.css
@@ -1,6 +1,8 @@
 .card-body{
     width: 30%;
     margin: 2%;
+    background-image: none;
+ 
 }
 .card1{
     display: flex;
@@ -8,6 +10,9 @@
     align-items:center;
     flex-direction: column;
     width: 100%;
+    border: double 5px var(--burgandy);
+    padding-bottom: 2%;
+    padding-top: 2%;
 }
 h1{
     font-family: 'Acme', sans-serif;
@@ -16,9 +21,10 @@ h1{
 }
 .card-image{
    width: 40%;
-   padding-top: 5%; 
-   object-fit:contain
+   object-fit:contain;
+   border: double 15px var(--burgandy);
 }
 p{
-    width: 40%;
+    width: 50%;
+    color: var(--burgandy)
 }
