--- a/brokenmetaljewelry/src/components/myWorks/myWorks.css
+++ b/brokenmetaljewelry/src/components/myWorks/myWorks.css
@@ -14,14 +14,14 @@
     flex-direction: column;
     width: 100%;
     border: double 5px var(--burgandy);
-    padding-bottom: 2%;
-    padding-top: 2%;
+    padding-bottom: 1%;
+    padding-top: 1%;
     margin-left: 5%;
 }
 h1{
     font-family: 'Acme', sans-serif;
     color:var(--burgandy);
-    font-size: 35px;
+    font-size: 2rem;
     display: flex;
 }
 .card-image{
@@ -31,5 +31,17 @@ h1{
 }
 p{
     width: 50%;
+    font-size: 15px;
     color: var(--forestGreen)
 }
+button {
+    background-color: var(--yellow);
+    border: 2px solid var(--burgandy);
+}
+@media screen and (max-width: 390px) {
+   
+    h1, p{
+        font-size: 20px;
+    }
+    
+ } 
