--- a/brokenmetaljewelry/src/components/myWorks/myWorks.css
+++ b/brokenmetaljewelry/src/components/myWorks/myWorks.css
@@ -43,7 +43,7 @@ h1{
    
 }
 .card-image:hover{
-    transform: scale(2);}
+    transform: scale(2) ease-in-out;}
 p{
     width: 50%;
     font-size: 20px;
@@ -63,7 +63,7 @@ button {
 @media screen and (max-width: 390px) {
    
     h1{
-        font-size: 15px;
+        font-size: 1rem;
     }
     
  } 
